spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ body {
     }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
     .container_form_mobile {
         padding-top: 35vh !important;
     }
